🐛✨♻️ Classes/subclasses; images in templates
- ♻️  Refactor class and subclass

General fixes:

- 🐛 include parent source for divided adventures
- 🐛 fix item property rendering/filtering
- 🔇 shorter logged stack traces

Templates and images:

- ✨ New template methods for fluff images
- ⚡️ templates using new methods for image display
- ✅ add additional example templates