@@ -1,23 +1,33 @@
 package dev.ebullient.convert.tools.dnd5e;
 
+import static dev.ebullient.convert.StringUtil.isPresent;
+import static dev.ebullient.convert.StringUtil.join;
+import static dev.ebullient.convert.StringUtil.joinConjunct;
+import static dev.ebullient.convert.StringUtil.markdownLinkToHtml;
+import static dev.ebullient.convert.StringUtil.toAnchorTag;
+import static dev.ebullient.convert.StringUtil.toTitleCase;
+import static dev.ebullient.convert.StringUtil.uppercaseFirst;
+
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
-import java.util.Set;
-import java.util.function.Function;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.node.ArrayNode;
 
 import dev.ebullient.convert.io.Msg;
+import dev.ebullient.convert.qute.ImageRef;
 import dev.ebullient.convert.tools.JsonNodeReader;
 import dev.ebullient.convert.tools.Tags;
 import dev.ebullient.convert.tools.dnd5e.OptionalFeatureIndex.OptionalFeatureType;
 import dev.ebullient.convert.tools.dnd5e.qute.QuteClass;
+import dev.ebullient.convert.tools.dnd5e.qute.QuteClass.HitPointDie;
+import dev.ebullient.convert.tools.dnd5e.qute.QuteClass.Multiclassing;
+import dev.ebullient.convert.tools.dnd5e.qute.QuteClass.StartingEquipment;
 import dev.ebullient.convert.tools.dnd5e.qute.QuteSubclass;
 import dev.ebullient.convert.tools.dnd5e.qute.Tools5eQuteBase;
 
@@ -26,35 +36,22 @@ public class Json2QuteClass extends Json2QuteCommon {
     final static Map<String, ClassFeature> keyToClassFeature = new HashMap<>();
 
     final Map<String, List<String>> startingText = new HashMap<>();
-    final List<ClassFeature> classFeatures = new ArrayList<>();
-    final List<Subclass> subclasses = new ArrayList<>();
-    boolean additionalFromBackground;
+    final boolean isSidekick;
+    final String decoratedClassName;
     final String classSource;
     final String subclassTitle;
-    final String decoratedClassName;
+    final String primaryAbility;
 
     String filename = null;
+    SidekickProficiencies sidekickProficiencies = null;
 
     Json2QuteClass(Tools5eIndex index, Tools5eIndexType type, JsonNode jsonNode) {
         super(index, type, jsonNode);
-        boolean pushed = parseState().push(getSources(), rootNode); // store state
-        try {
-            if (!isSidekick()) {
-                findClassHitDice();
-                findStartingEquipment();
-                findClassProficiencies();
-            }
-
-            decoratedClassName = type.decoratedName(jsonNode);
-            classSource = jsonNode.get("source").asText();
-            subclassTitle = getTextOrEmpty(rootNode, "subclassTitle");
-
-            // class features can be text elements or object elements (classFeature field)
-            findClassFeatures(Tools5eIndexType.classfeature, jsonNode.get("classFeatures"), classFeatures, "classFeature");
-            findSubclasses();
-        } finally {
-            parseState().pop(pushed); // restore state
-        }
+        decoratedClassName = type.decoratedName(jsonNode);
+        classSource = jsonNode.get("source").asText();
+        isSidekick = ClassFields.isSidekick.booleanOrDefault(jsonNode, false);
+        subclassTitle = ClassFields.subclassTitle.getTextOrEmpty(jsonNode);
+        primaryAbility = buildPrimaryAbility();
     }
 
     @Override
@@ -66,385 +63,142 @@ public class Json2QuteClass extends Json2QuteCommon {
 
     @Override
     protected QuteClass buildQuteResource() {
+        // Some compensation for sidekicks. Do this first
+        List<ClassFeature> features = findClassFeatures(
+                Tools5eIndexType.classfeature,
+                ClassFields.classFeatures.ensureArrayIn(rootNode),
+                ClassFields.classFeature);
+
         Tags tags = new Tags(getSources());
         tags.add("class", getName());
 
-        // May have fluff text. Does not have separate fluff images
-        List<String> text = getFluff(Tools5eIndexType.classFluff, "##", new ArrayList<>());
+        List<String> progression = buildProgressionTable(features, rootNode, ClassFields.classTableGroups);
+
+        List<ImageRef> images = new ArrayList<>();
+        List<String> text = getFluff(Tools5eIndexType.classFluff, "##", images);
 
         maybeAddBlankLine(text);
         text.add("## Class Features");
-        for (ClassFeature cf : classFeatures) {
+        for (ClassFeature cf : features) {
             cf.appendText(this, text, getSources().primarySource());
         }
 
-        addOptionalFeatureText(rootNode, text);
-
-        List<String> progression = new ArrayList<>();
-        buildFeatureProgression(progression);
-        maybeAddBlankLine(progression);
-        buildClassProgression(rootNode, progression, "classTableGroups");
+        addOptionalFeatureText(rootNode, getSources().primarySource(), text);
 
         return new QuteClass(getSources(),
                 decoratedClassName,
                 getSourceText(getSources()),
-                startingHitDice(),
                 String.join("\n", progression),
+                primaryAbility,
+                buildHitDie(),
                 buildStartingEquipment(),
-                buildStartMulticlassing(),
+                buildMulticlassing(),
                 String.join("\n", text),
+                images,
                 tags);
     }
 
     public List<QuteSubclass> buildSubclasses() {
         List<QuteSubclass> quteSc = new ArrayList<>();
 
-        for (Subclass sc : subclasses) {
-            boolean pushed = parseState().push(sc.sources);
-            filename = Tools5eQuteBase.fixFileName(sc.getName(), sc.sources);
-            try {
-                Tags tags = new Tags(sc.sources);
-                tags.add("subclass", getName(), sc.shortName);
+        for (String scKey : ClassFields.subclassKeys.getListOfStrings(rootNode, tui())) {
+            JsonNode scNode = index.getNode(scKey);
+            Tools5eSources scSources = Tools5eSources.findSources(scKey);
+            String scName = scSources.getName();
+            String scShortName = ClassFields.shortName.getTextOrDefault(scNode, scName);
 
-                if (tags.toString().contains("cleric")) {
-                    tags.add("domain", sc.shortName);
+            List<ClassFeature> scFeatures = findClassFeatures(
+                    Tools5eIndexType.subclassFeature,
+                    ClassFields.subclassFeatures.ensureArrayIn(scNode),
+                    ClassFields.subclassFeature);
+
+            filename = Tools5eQuteBase.fixFileName(scName, scSources);
+            boolean pushed = parseState().push(scSources);
+            try {
+                Tags tags = new Tags(scSources);
+                tags.add("subclass", getName(), scShortName);
+
+                if (getName().matches(".*[Cc]leric.*")) {
+                    tags.add("domain", scShortName);
                 }
 
-                List<String> text = new ArrayList<>();
+                List<String> progression = buildProgressionTable(scFeatures, scNode, ClassFields.subclassTableGroups);
+
+                List<ImageRef> images = new ArrayList<>();
+                List<String> text = getFluff(scNode, Tools5eIndexType.subclassFluff, "##", images);
 
                 text.add("## Class Features");
-                for (ClassFeature scf : sc.classFeatures) {
-                    scf.appendText(this, text, sc.sources.primarySource());
+                for (ClassFeature scf : scFeatures) {
+                    scf.appendText(this, text, scSources.primarySource());
                 }
 
-                addOptionalFeatureText(sc.subclassNode, text);
+                addOptionalFeatureText(scNode, scSources.primarySource(), text);
 
-                List<String> progression = new ArrayList<>();
-                buildClassProgression(sc.subclassNode, progression, "subclassTableGroups");
-
-                quteSc.add(new QuteSubclass(sc.sources,
-                        sc.getName(),
-                        getSourceText(sc.sources),
+                quteSc.add(new QuteSubclass(scSources,
+                        scName,
+                        getSourceText(scSources),
                         getName(), // parentClassName
                         String.format("[%s](%s.md)", decoratedClassName,
-                                Tools5eQuteBase.getClassResource(getName(), sc.parentClassSource)),
-                        sc.parentClassSource, // parentClassSource
+                                Tools5eQuteBase.getClassResource(getName(), getSources().primarySource())),
+                        getSources().primarySource(),
                         subclassTitle,
                         String.join("\n", progression),
                         String.join("\n", text),
+                        images,
                         tags));
+
             } finally {
                 parseState().pop(pushed);
                 filename = null;
             }
         }
-
         return quteSc;
     }
 
-    void buildFeatureProgression(List<String> progression) {
-        List<List<String>> row_levels = new ArrayList<>(21);
-        for (int i = 0; i < 21; i++) {
-            row_levels.add(new ArrayList<>());
-        }
-
-        Map<Object, List<ClassFeature>> levelToFeature = classFeatures.stream()
-                .collect(Collectors.groupingBy(x -> Integer.valueOf(x.level)));
-
-        // Headings are in row 0
-        row_levels.get(0).add("Level");
-        row_levels.get(0).add("PB");
-        row_levels.get(0).add("Features");
-        // Values
-        for (int level = 1; level < row_levels.size(); level++) {
-            final int featureLevel = level;
-            row_levels.get(level).add(JsonSource.levelToString(level));
-            row_levels.get(level).add("+" + levelToPb(level));
-
-            List<ClassFeature> features = levelToFeature.get(level);
-            if (features == null || features.isEmpty()) {
-                row_levels.get(level).add("⏤");
-            } else {
-                row_levels.get(level).add(features.stream()
-                        .map(x -> markdownLinkify(x.getName(), featureLevel))
-                        .collect(Collectors.joining(", ")));
-            }
-        }
-
-        progression.addAll(
-                convertRowsToTable(row_levels, "Feature progression",
-                        List.of("- PB: Proficiency Bonus"),
-                        "feature-progression"));
-        maybeAddBlankLine(progression);
+    private ClassFeature getClassFeature(String featureKey, Tools5eIndexType featureType) {
+        return keyToClassFeature.computeIfAbsent(featureKey, k -> {
+            JsonNode featureNode = index().getOriginNoFallback(featureKey);
+            return new ClassFeature(featureType, featureKey, featureNode);
+        });
     }
 
-    void buildClassProgression(JsonNode node, List<String> progression, String field) {
-        if (!node.has(field)) {
+    List<ClassFeature> findClassFeatures(Tools5eIndexType featureType, JsonNode featureElements,
+            ClassFields field) {
+        List<ClassFeature> features = new ArrayList<>();
+        for (JsonNode featureNode : featureElements) {
+
+            String featureKey = featureNode.isTextual()
+                    ? featureType.fromTagReference(featureNode.asText())
+                    : featureType.fromTagReference(ClassFields.classFeature.getTextOrEmpty(featureNode));
+
+            var classFeature = getClassFeature(featureKey, featureType);
+
+            if (isSidekick && "1".equals(classFeature.level())
+                    && "Bonus Proficiencies".equalsIgnoreCase(classFeature.getName())) {
+                // sidekick classes don't have startingProficiencies, they have a bonus
+                // proficiency feature instead.
+                sidekickProficiencies = new SidekickProficiencies(classFeature.cfNode());
+            }
+            // Add to list of features (for content rendering later)
+            features.add(classFeature);
+        }
+        return features;
+    }
+
+    void addOptionalFeatureText(JsonNode optFeatures, String primarySource, List<String> text) {
+        JsonNode optionalFeatureProgression = ClassFields.optionalfeatureProgression.getFrom(optFeatures);
+        if (optionalFeatureProgression == null) {
             return;
         }
 
-        List<List<String>> row_levels = new ArrayList<>(21);
-        for (int i = 0; i < 21; i++) {
-            row_levels.add(new ArrayList<>());
-            if (i == 0) {
-                row_levels.get(i).add("Level");
-            } else {
-                row_levels.get(i).add(JsonSource.levelToString(i));
-            }
-        }
-
-        for (JsonNode table : iterableElements(node.get(field))) {
-            // Headings
-            for (JsonNode c : iterableElements(table.get("colLabels"))) {
-                String label = c.asText();
-                if (label.contains("|spells|")) {
-                    row_levels.get(0).add(
-                            label.substring(label.indexOf(" ") + 1, label.indexOf("|")));
-                } else {
-                    row_levels.get(0).add(replaceText(label));
-                }
-            }
-
-            // Values
-            if (table.has("rows")) {
-                ArrayNode rows = table.withArray("rows");
-                for (int i = 0; i < rows.size(); i++) {
-                    int level = i + 1;
-                    if (level >= row_levels.size()) {
-                        tui().errorf("Badly formed class-progression table in %s: %s", sources, table.toString());
-                        break;
-                    }
-                    rows.get(i).forEach(c -> row_levels.get(level).add(columnValue(c)));
-                }
-            } else if (table.has("rowsSpellProgression")) {
-                ArrayNode rows = table.withArray("rowsSpellProgression");
-                for (int i = 0; i < rows.size(); i++) {
-                    int level = i + 1;
-                    if (level >= row_levels.size()) {
-                        tui().errorf("Badly formed spell-progression table in %s: %s", sources, table.toString());
-                        break;
-                    }
-                    rows.get(i).forEach(c -> row_levels.get(level).add(columnValue(c)));
-                }
-            }
-        }
-
-        progression.addAll(convertRowsToTable(row_levels, "Class progression",
-                List.of("- 1st-9th: Spell slots per level"), "class-progression"));
-    }
-
-    List<String> convertRowsToTable(List<List<String>> row_levels, String title, List<String> footer, String blockid) {
-        List<String> text = new ArrayList<>();
-        // Convert each row to markdown columns
-        row_levels.forEach(r -> text.add("| " + String.join(" | ", r) + " |"));
-
-        // insert a header delimiting row (copy row 0, replace everything not a "|" with a "-")
-        text.add(1, text.get(0).replaceAll("[^|]", "-"));
-
-        if (footer != null && !footer.isEmpty()) {
-            maybeAddBlankLine(text);
-            text.addAll(footer);
-        }
-
-        // Move everything into a callout box
-        text.replaceAll(s -> "> " + s);
-
-        // add start of block
-        text.add(0, "> [!tldr]- " + title);
-        text.add(1, "> "); // must have a blank line before table starts
-
-        text.add("^" + blockid);
-        return text;
-    }
-
-    String buildStartingEquipment() {
-        List<String> startingEquipment = new ArrayList<>();
-        startingEquipment.add(String.format("You are proficient with the following items%s.",
-                additionalFromBackground
-                        ? ", in addition to any proficiencies provided by your race or background"
-                        : ""));
-        maybeAddBlankLine(startingEquipment);
-
-        if (startingText.containsKey("saves")) {
-            startingEquipment.add(String.format("- **Saving Throws**: %s", startingTextJoinOrDefault("saves", "none")));
-        }
-        startingEquipment.add(String.format("- **Armor**: %s", startingTextJoinOrDefault("armor", "none")));
-        startingEquipment.add(String.format("- **Weapons**: %s", startingTextJoinOrDefault("weapons", "none")));
-        startingEquipment.add(String.format("- **Tools**: %s", startingTextJoinOrDefault("tools", "none")));
-        startingEquipment.add(String.format("- **Skills**: %s", startingTextJoinOrDefault("skills", "none")));
-
-        if (!isSidekick()) {
-            maybeAddBlankLine(startingEquipment);
-            startingEquipment.add(String.format("You begin play with the following equipment%s.",
-                    additionalFromBackground ? ", in addition to any equipment provided by your background" : ""));
-            maybeAddBlankLine(startingEquipment);
-            List<String> equipment = startingText.get("equipment");
-            if (equipment == null) {
-                startingEquipment.add("- None");
-            } else {
-                startingEquipment.addAll(equipment);
-            }
-            String wealth = startingTextJoinOrDefault("wealth", "");
-            if (!wealth.isEmpty()) {
-                maybeAddBlankLine(startingEquipment);
-                startingEquipment.add(String.format("Alternatively, you may start with %s gp and choose your own equipment.",
-                        startingTextJoinOrDefault("wealth", "3d4 x 10")));
-            }
-        }
-        return String.join("\n", startingEquipment);
-    }
-
-    String buildStartMulticlassing() {
-        JsonNode multiclassing = rootNode.get("multiclassing");
-        if (multiclassing == null) {
-            return null;
-        }
-
-        final List<String> startMulticlass = new ArrayList<>();
-        startMulticlass.add(String.format("To multiclass as a %s, you must meet the following prerequisites:", getName()));
-
-        maybeAddBlankLine(startMulticlass);
-        JsonNode requirements = multiclassing.get("requirements");
-        if (requirements == null) {
-            tui().warnf(Msg.NOT_SET, "No requirements specified to multiclass %s: %s", getSources().getKey(), multiclassing);
-        } else if (requirements.has("or")) {
-            List<String> options = new ArrayList<>();
-            requirements.get("or").get(0).fields().forEachRemaining(ability -> options.add(String.format("%s %s",
-                    SkillOrAbility.format(ability.getKey(), index(), getSources()), ability.getValue().asText())));
-            startMulticlass.add("- " + String.join(", or ", options));
-        } else {
-            requirements.fields().forEachRemaining(
-                    ability -> startMulticlass.add(String.format("- %s %s",
-                            SkillOrAbility.format(ability.getKey(), index(), getSources()), ability.getValue().asText())));
-        }
-
-        JsonNode gained = multiclassing.get("proficienciesGained");
-        if (gained != null) {
-            maybeAddBlankLine(startMulticlass);
-            startMulticlass.add("You gain the following proficiencies:");
-            maybeAddBlankLine(startMulticlass);
-
-            startMulticlass.add(String.format("- **Armor**: %s",
-                    startingTextJoinOrDefault(gained, "armor")));
-            startMulticlass.add(String.format("- **Weapons**: %s",
-                    startingTextJoinOrDefault(gained, "weapons")));
-            startMulticlass.add(String.format("- **Tools**: %s",
-                    startingTextJoinOrDefault(gained, "tools")));
-
-            if (gained.has("skills")) {
-                startMulticlass.add(String.format("- **Skills**: %s",
-                        classSkills(gained, sources)));
-            }
-        }
-        return String.join("\n", startMulticlass);
-    }
-
-    boolean isSidekick() {
-        return getSources().getName().toLowerCase().contains("sidekick");
-    }
-
-    void findClassHitDice() {
-        JsonNode hd = rootNode.get("hd");
-        if (hd != null) {
-            put("hd", List.of(hd.get("faces").asText()));
-        }
-    }
-
-    void findClassFeatures(Tools5eIndexType type, JsonNode arrayElement, List<ClassFeature> features, String fieldName) {
-        for (JsonNode cf : iterableElements(arrayElement)) {
-
-            ClassFeature feature = findClassFeature(this, type, cf, fieldName);
-            if (feature == null) {
-                continue;
-            }
-
-            features.add(feature);
-
-            if (isSidekick() && "1".equals(feature.level) && feature.getName().equals("Bonus Proficiencies")) {
-                sidekickProficiencies(feature.cfNode);
-            }
-        }
-    }
-
-    static ClassFeature findClassFeature(JsonSource converter, Tools5eIndexType type, JsonNode cf, String fieldName) {
-        String lookup = cf.isTextual() ? cf.asText() : cf.get(fieldName).asText();
-
-        String finalKey = type.fromTagReference(lookup);
-        JsonNode featureJson = finalKey == null ? null : converter.index().resolveClassFeatureNode(finalKey);
-
-        if (featureJson == null) {
-            return null; // skipped or not found
-        }
-
-        ClassFeature feature = keyToClassFeature.get(finalKey);
-        if (feature == null) {
-            feature = new ClassFeature();
-            feature.cfNode = featureJson;
-            feature.cfType = type;
-            feature.level = lookup.replaceAll(".*\\|(\\d+)\\|?.*", "$1");
-            feature.cfSources = Tools5eSources.findSources(finalKey);
-
-            keyToClassFeature.put(finalKey, feature);
-        }
-        // check inclusion of class feature sources
-        if (!converter.cfg().sourceIncluded(feature.cfSources)) {
-            return null; // skipped
-        }
-        return feature;
-    }
-
-    void findSubclasses() {
-        Map<JsonNode, String> scNodes = new HashMap<>();
-        for (JsonNode x : index().classElementsMatching(Tools5eIndexType.subclass, getSources().getName(), classSource)) {
-            scNodes.put(x, classSource);
-        }
-        for (String aliasKey : index.getAliasesFor(getSources().getKey())) {
-            int lastSegment = aliasKey.lastIndexOf('|');
-            String aliasSource = aliasKey.substring(lastSegment + 1);
-            for (JsonNode x : index().classElementsMatching(Tools5eIndexType.subclass, getSources().getName(), aliasSource)) {
-                scNodes.put(x, aliasSource);
-            }
-        }
-
-        for (JsonNode scNode : scNodes.keySet()) {
-            String parentClassSource = scNodes.get(scNode);
-            String scKey = Tools5eIndexType.subclass.createKey(scNode);
-            JsonNode resolved = index.resolveClassFeatureNode(scKey, scNode);
-
-            Subclass sc = new Subclass();
-            sc.subclassNode = resolved;
-            sc.parentClassSource = parentClassSource; // e.g. PHB or DMG
-            sc.parentKey = getSources().getKey();
-            sc.shortName = resolved.get("shortName").asText();
-            sc.sources = Tools5eSources.findSources(scKey);
-
-            // If parent sources does not contain subclass source...
-            if (!getSources().contains(sc.sources) && index.isExcluded(scKey)) {
-                continue; // excluded
-            }
-
-            // subclass features are text elements (null field)
-            findClassFeatures(Tools5eIndexType.subclassFeature, resolved.get("subclassFeatures"), sc.classFeatures, null);
-
-            subclasses.add(sc);
-        }
-    }
-
-    void addOptionalFeatureText(JsonNode entry, List<String> text) {
-        JsonNode optionalFeatureProgession = entry.get("optionalfeatureProgression");
-        if (optionalFeatureProgession == null) {
-            return;
-        }
+        String relativePath = Tools5eIndexType.optionalFeatureTypes.getRelativePath();
+        String source = SourceField.source.getTextOrDefault(optionalFeatureProgression, primarySource);
 
         maybeAddBlankLine(text);
         text.add("## Optional Features");
-
-        String relativePath = Tools5eIndexType.optionalFeatureTypes.getRelativePath();
-        String source = entry.get("source").asText();
-        for (JsonNode ofp : iterableElements(optionalFeatureProgession)) {
+        for (JsonNode ofp : iterableElements(optionalFeatureProgression)) {
             for (String featureType : Tools5eFields.featureType.getListOfStrings(ofp, tui())) {
                 OptionalFeatureType oft = index.getOptionalFeatureType(featureType, source);
-
                 if (oft != null) {
                     maybeAddBlankLine(text);
                     text.add("> [!example]- " + oft.title);
@@ -456,234 +210,454 @@ public class Json2QuteClass extends Json2QuteCommon {
                     text.add("^list-" + slugify(oft.title));
                 } else {
                     tui().errorf(
-                            Msg.UNRESOLVED, "Can not find optional feature type %s for progression. Source: %s",
-                            featureType, ofp);
+                            Msg.UNRESOLVED, "Can not find optional feature type %s for progression. Source: %s; Reference: %s",
+                            featureType, ofp, parseState().getSource());
                 }
             }
         }
     }
 
-    void findStartingEquipment() {
-        JsonNode equipment = rootNode.get("startingEquipment");
-        if (equipment != null) {
-            String wealth = getWealth(equipment);
-            put("wealth", List.of(wealth));
-            put("equipment", defaultEquipment(equipment));
-            additionalFromBackground = booleanOrDefault(equipment, "additionalFromBackground", true);
-        }
-    }
-
-    public void findClassProficiencies() {
-        if (rootNode.has("proficiency")) {
-            List<String> savingThrows = new ArrayList<>();
-            rootNode.withArray("proficiency").forEach(n -> savingThrows.add(asAbilityEnum(n)));
-            put("saves", savingThrows);
+    String buildPrimaryAbility() {
+        // primary ability only exists in 2024 class versions
+        if (!ClassFields.primaryAbility.existsIn(rootNode)) {
+            return null;
         }
 
-        JsonNode startingProf = rootNode.get("startingProficiencies");
-        if (startingProf == null) {
-            tui().errorf("%s has no starting proficiencies", sources);
-        } else {
-            if (startingProf.has("armor")) {
-                put("armor", findAndReplace(startingProf, "armor"));
-            }
-            if (startingProf.has("weapons")) {
-                put("weapons", findAndReplace(startingProf, "weapons"));
-            }
-            if (startingProf.has("tools")) {
-                put("tools", findAndReplace(startingProf, "tools"));
-            }
-            if (startingProf.has("skills")) {
-                put("skills", List.of(classSkills(startingProf, sources)));
-            }
+        // Array of objects with multiple properties
+        List<String> abilities = ClassFields.primaryAbility.streamProps(rootNode)
+                .map(e -> {
+                    return streamPropsExcluding(rootNode)
+                            .filter(x -> x.getValue().asBoolean())
+                            .map(x -> SkillOrAbility.format(x.getKey(), index(), getSources()))
+                            .toList();
+                })
+                .map(l -> joinConjunct("and", l))
+                .toList();
+        return joinConjunct("or", abilities);
+    }
+
+    HitPointDie buildHitDie() {
+        if (isSidekick) {
+            // Sidekicks do not have a hit die. Hit points depend on creature statblock
+            return new HitPointDie(getName(), 0, 0, this.sources.isClassic(), isSidekick);
         }
-    }
-
-    void sidekickProficiencies(JsonNode sidekickClassFeature) {
-        for (JsonNode e : iterableEntries(sidekickClassFeature)) {
-            String line = e.asText();
-            if (line.contains("saving throw")) {
-                //"The sidekick gains proficiency in one saving throw of your choice: Dexterity, Intelligence, or Charisma.",
-                //"The sidekick gains proficiency in one saving throw of your choice: Wisdom, Intelligence, or Charisma.",
-                //"The sidekick gains proficiency in one saving throw of your choice: Strength, Dexterity, or Constitution.",
-                String text = line.replaceAll(".*in one saving throw of your choice: (.*)", "$1")
-                        .replaceAll("or ", "").replace(".", "");
-                put("saves", List.of(text));
-            }
-            if (line.contains("skills")) {
-                // "In addition, the sidekick gains proficiency in five skills of your choice, and it gains proficiency with light armor. If it is a humanoid or has a simple or martial weapon in its stat block, it also gains proficiency with all simple weapons and with two tools of your choice."
-                // "In addition, the sidekick gains proficiency in two skills of your choice from the following list: {@skill Arcana}, {@skill History}, {@skill Insight}, {@skill Investigation}, {@skill Medicine}, {@skill Performance}, {@skill Persuasion}, and {@skill Religion}.",
-                // "In addition, the sidekick gains proficiency in two skills of your choice from the following list: {@skill Acrobatics}, {@skill Animal Handling}, {@skill Athletics}, {@skill Intimidation}, {@skill Nature}, {@skill Perception}, and {@skill Survival}.",
-                String numSkills = line.replaceAll(".* proficiency in (.*) skills .*", "$1");
-                int count = Integer.parseInt(textToInt(numSkills));
-                put("numSkills", List.of(count + ""));
-
-                Collection<String> skills;
-                int start = line.indexOf("list:");
-                if (start >= 0) {
-                    int end = line.indexOf('.');
-                    String text = line.substring(start + 5, end).trim()
-                            .replaceAll("\\{@skill ([^}]+)}", "$1")
-                            .replace(".", "")
-                            .replace("and ", "");
-                    skills = Set.of(text.split("\\s*,\\s*"));
-                } else {
-                    skills = SkillOrAbility.allSkills;
-                }
-                put("skills", List.of(skillChoices(skills, count)));
-            }
-            if (line.contains("armor")) {
-                // "In addition, the sidekick gains proficiency in five skills of your choice, and it gains proficiency with light armor. If it is a humanoid or has a simple or martial weapon in its stat block, it also gains proficiency with all simple weapons and with two tools of your choice."
-                // "The sidekick gains proficiency with light armor, and if it is a humanoid or has a simple or martial weapon in its stat block, it also gains proficiency with all simple weapons."
-                // "The sidekick gains proficiency with all armor, and if it is a humanoid or has a simple or martial weapon in its stat block, it gains proficiency with shields and all simple and martial weapons."
-                if (line.contains("all armor")) { // Warrior Sidekick
-                    put("armor", List.of("light, medium, heavy, shields"));
-                    put("weapons", List.of("martial"));
-                } else {
-                    put("armor", List.of("light"));
-                    put("weapons", List.of("simple"));
-                }
-            }
-            if (line.contains("tools")) {
-                put("tools", List.of("two tools of your choice"));
-            }
+        JsonNode hdNode = ClassFields.hd.getFrom(rootNode);
+        if (hdNode != null) {
+            // both attributes are required. Default should not be necessary
+            return new HitPointDie(
+                    getName(),
+                    ClassFields.number.intOrDefault(hdNode, 1),
+                    ClassFields.faces.intOrDefault(hdNode, 1),
+                    this.sources.isClassic(),
+                    isSidekick);
         }
+        return null;
     }
 
-    String skillChoices(Collection<String> skills, int numSkills) {
-        return String.format("Choose %s from %s",
-                numSkills,
-                skills.stream().map(x -> index.findSkillOrAbility(x, getSources()))
-                        .filter(x -> x != null)
-                        .sorted(SkillOrAbility.comparator)
-                        .map(x -> "*" + x.value() + "*")
-                        .collect(Collectors.joining(", ")));
-    }
-
-    String chooseSkillListFrom(JsonNode choose) {
-        int count = choose.has("count")
-                ? choose.get("count").asInt()
-                : 1;
-
-        ArrayNode from = choose.withArray("from");
-        return skillChoices(toListOfStrings(from), count);
-    }
-
-    String classSkills(JsonNode source, Tools5eSources sources) {
-        List<String> result = new ArrayList<>();
-
-        ArrayNode skillNode = source.withArray("skills");
-        if (skillNode.size() > 1) {
-            tui().errorf("Multivalue skill array in %s: %s", sources, source.toPrettyString());
+    StartingEquipment buildStartingEquipment() {
+        if (isSidekick) {
+            if (sidekickProficiencies == null) {
+                tui().warnf(Msg.UNKNOWN, "Sidekick class %s has no proficiencies", getName());
+                return null;
+            }
+            return new StartingEquipment(
+                    sidekickProficiencies.savingThrows(),
+                    sidekickProficiencies.skills(),
+                    sidekickProficiencies.weapons(),
+                    sidekickProficiencies.tools(),
+                    sidekickProficiencies.armor(),
+                    "",
+                    sources.isClassic());
         }
-        JsonNode skills = skillNode.get(0);
 
-        for (Entry<String, JsonNode> e : iterableFields(skills)) {
-            String skill = e.getKey();
-            if ("choose".equals(skill)) {
-                result.add(chooseSkillListFrom(e.getValue()));
-            } else if ("any".equals(skill)) {
-                int count = skills.get("any").asInt();
-                result.add(skillChoices(SkillOrAbility.allSkills, count));
+        List<String> savingThrows = ClassFields.proficiency.streamFrom(rootNode)
+                .map(n -> SkillOrAbility.format(n.asText(), index(), getSources()))
+                .sorted()
+                .toList();
+
+        JsonNode startingProficiencies = ClassFields.startingProficiencies.getFrom(rootNode);
+
+        var armor = listOfArmorProficiencies(startingProficiencies);
+        var skills = listOfSkillProfiencies(startingProficiencies);
+        var tools = listOfToolProfiencies(startingProficiencies);
+        var weapons = listOfWeaponProfiencies(startingProficiencies);
+
+        return new StartingEquipment(savingThrows, skills, weapons, tools, armor,
+                equipmentDescription(ClassFields.startingEquipment.getFrom(rootNode)),
+                sources.isClassic());
+    }
+
+    Multiclassing buildMulticlassing() {
+        JsonNode multiclassing = ClassFields.multiclassing.getFrom(rootNode);
+        if (multiclassing == null || multiclassing.isEmpty()) {
+            return null;
+        }
+        // primary ablity only exists in 2024 class versions (or homebrew)
+        // requirements only exist in 2014 class versions (or homebrew)
+        String requirements = null;
+        if (ClassFields.requirements.existsIn(multiclassing)) {
+            List<String> reqContents = new ArrayList<>();
+
+            JsonNode reqNode = ClassFields.requirements.getFrom(multiclassing);
+            JsonNode orNode = ClassFields.or.getFrom(reqNode);
+            if (orNode == null) {
+                reqContents.add("**Ability Score Minimum:**" + abilityRequirements(reqNode, ", "));
             } else {
-                SkillOrAbility custom = index.findSkillOrAbility(skill, getSources());
-                if (custom == null) {
-                    tui().errorf("Unexpected skills in starting proficiencies for %s: %s",
-                            sources, source.toPrettyString());
-                }
-                result.add("*" + custom.value() + "*");
+                reqContents.add("**Ability Score Minimum:**" + streamOf(orNode)
+                        .map(n -> abilityRequirements(n, " or "))
+                        .collect(Collectors.joining("; ")));
             }
+            appendToText(reqContents, SourceField.entries.getFrom(reqNode), null);
+            requirements = String.join("\n", reqContents);
         }
-        return String.join("; ", result);
+
+        JsonNode reqSpecialNode = ClassFields.requirementsSpecial.getFrom(multiclassing);
+        String requirementsSpecial = reqSpecialNode == null
+                ? null
+                : replaceText(reqSpecialNode);
+
+        JsonNode profGained = ClassFields.proficienciesGained.getFrom(multiclassing);
+
+        List<String> skillsGained = listOfSkillProfiencies(profGained);
+        List<String> weaponsGained = listOfWeaponProfiencies(profGained);
+        List<String> toolsGained = listOfToolProfiencies(profGained);
+        List<String> armorGained = listOfArmorProficiencies(profGained);
+
+        return new Multiclassing(
+                primaryAbility,
+                requirements,
+                requirementsSpecial,
+                join(", ", skillsGained),
+                join(", ", weaponsGained),
+                join(", ", toolsGained),
+                join(", ", armorGained),
+                flattenToString(SourceField.entries.getFrom(multiclassing), "\n"),
+                getSources().isClassic());
     }
 
-    List<String> defaultEquipment(JsonNode equipment) {
+    List<String> buildProgressionTable(List<ClassFeature> features, JsonNode sourceNode, ClassFields field) {
+        List<String> headings = new ArrayList<>();
+        List<String> spellCasting = new ArrayList<>();
+
+        Map<Integer, LevelProgression> levels = new HashMap<>();
+        for (int i = 1; i < 21; i++) {
+            // Create LevelProgression for each level
+            // this sets level and proficiency bonus for level
+            levels.put(i, new LevelProgression(i));
+        }
+
+        for (ClassFeature feature : features) {
+            var lp = levels.get(Integer.valueOf(feature.level()));
+            lp.addFeature(feature);
+        }
+
+        for (JsonNode tableNode : field.iterateArrayFrom(sourceNode)) {
+            if (ClassFields.rows.existsIn(tableNode)) {
+                // headings for other/middle columns
+                for (JsonNode label : ClassFields.colLabels.iterateArrayFrom(tableNode)) {
+                    headings.add(markdownLinkToHtml(replaceText(label)));
+                }
+
+                // values for other/middle columns
+                int i = 1;
+                for (JsonNode row : ClassFields.rows.iterateArrayFrom(tableNode)) {
+                    var lp = levels.get(Integer.valueOf(i));
+                    for (JsonNode col : iterableElements(row)) {
+                        lp.addValue(progressionColumnValue(col));
+                    }
+                    i++;
+                }
+            } else if (ClassFields.rowsSpellProgression.existsIn(tableNode)) {
+                // headings for other/middle columns
+                for (JsonNode label : ClassFields.colLabels.iterateArrayFrom(tableNode)) {
+                    spellCasting.add(replaceText(label));
+                }
+                int i = 1;
+                for (JsonNode row : ClassFields.rowsSpellProgression.iterateArrayFrom(tableNode)) {
+                    var lp = levels.get(Integer.valueOf(i));
+                    for (JsonNode col : iterableElements(row)) {
+                        lp.addSpellSlot(progressionColumnValue(col));
+                    }
+                    i++;
+                }
+            }
+        }
+
+        return progressionAsTable(headings, spellCasting, levels);
+    }
+
+    List<String> progressionAsTable(List<String> headings,
+            List<String> spellCasting,
+            Map<Integer, LevelProgression> levels) {
         List<String> text = new ArrayList<>();
-        appendList(text, equipment.withArray("default"), ListType.unordered);
+        text.add("[!tldr] Class and Feature Progression");
+        text.add("");
+        text.add("<table class=\"class-progression\">");
+        text.add("<thead>");
+        // Top-level heading row to group spell casting columns
+        text.add("<tr><th colspan='%s'></th>%s</tr>"
+                .formatted(
+                        3 + headings.size(),
+                        spellCasting.isEmpty()
+                                ? ""
+                                : "<th colspan='%s'>Spell Slots per Spell Level</th>"
+                                        .formatted(spellCasting.size())));
+
+        text.add(
+                "<tr class=\"class-progression\"><th class\"level\">Level</th><th class\"pb\">PB</th><th class\"feature\">Features</th>%s%s</tr>"
+                        .formatted(
+                                headings.isEmpty()
+                                        ? ""
+                                        : "<th class=\"value\">" + join("</th><th class=\"value\">", headings)
+                                                + "</th>",
+                                spellCasting.isEmpty()
+                                        ? ""
+                                        : "<th class=\"spellSlot\">"
+                                                + join("</th><th class=\"spellSlot\">", spellCasting) + "</th>"));
+
+        text.add("</thead><tbody>");
+
+        for (int i = 1; i < 21; i++) {
+            var lp = levels.get(Integer.valueOf(i));
+            text.add(
+                    "<tr class=\"class-progression\"><td class\"level\">%s</td><td class\"pb\">%s</td><td class\"feature\">%s</td>%s%s</tr>"
+                            .formatted(
+                                    lp.level, lp.pb,
+                                    join(", ", lp.features),
+                                    lp.values.isEmpty()
+                                            ? ""
+                                            : "<td class=\"value\">" + join("</td><td class=\"value\">", lp.values)
+                                                    + "</td>",
+                                    spellCasting.isEmpty()
+                                            ? ""
+                                            : "<td class=\"spellSlot\">"
+                                                    + join("</td><td class=\"spellSlot\">", lp.spellSlots) + "</td>"));
+        }
+
+        text.add("</tbody></table>");
+
+        // Move everything into a callout box
+        text.replaceAll(s -> "> " + s);
+        text.add("^class-progession");
         return text;
     }
 
-    String getWealth(JsonNode equipment) {
-        return replaceText(getTextOrEmpty(equipment, "goldAlternative"));
-    }
-
-    void put(String key, List<String> value) {
-        startingText.put(key, value);
-    }
-
-    int startingHitDice() {
-        List<String> text = startingText.get("hd");
-        if (text == null || text.isEmpty()) {
-            return 0;
+    String progressionColumnValue(JsonNode c) {
+        if (c == null || c.isNull()) {
+            return "⏤";
         }
-        if (text.size() > 1) {
-            throw new IllegalArgumentException("Unable to parse int from starting text field: " + text);
+        if (c.isObject()) {
+            String type = ClassFields.type.getTextOrEmpty(c);
+            return switch (type) {
+                case "dice" -> {
+                    List<String> rolls = new ArrayList<>();
+                    for (JsonNode roll : ClassFields.toRoll.iterateArrayFrom(c)) {
+                        rolls.add("%sd%s".formatted(
+                                ClassFields.number.getTextOrEmpty(roll),
+                                ClassFields.faces.getTextOrEmpty(roll)));
+                    }
+                    yield join(",", rolls);
+                }
+                case "bonus", "bonusSpeed" -> {
+                    yield "+" + ClassFields.value.getTextOrEmpty(c);
+                }
+                default -> throw new IllegalArgumentException("Unknown column object value: " + c.toPrettyString());
+            };
         }
-        return Integer.parseInt(text.get(0));
+        String value = c.asText();
+        return value.isEmpty() || value.equals("0")
+                ? "⏤"
+                : replaceText(value);
     }
 
-    String startingTextJoinOrDefault(String field, String value) {
-        List<String> text = startingText.get(field);
-        return text == null ? value : String.join(", ", text);
+    String abilityRequirements(JsonNode reqNode, String joiner) {
+        return streamProps(reqNode)
+                .filter(n -> SkillOrAbility.fromTextValue(n.getKey()) != null)
+                .map(e -> "%s %s".formatted(
+                        SkillOrAbility.format(e.getKey(), index(), getSources()),
+                        e.getValue().asText()))
+                .sorted()
+                .collect(Collectors.joining(joiner));
     }
 
-    String startingTextJoinOrDefault(JsonNode source, String field) {
-        return startingTextJoinOrDefault(source, field, s -> s);
+    List<String> listOfArmorProficiencies(JsonNode containingNode) {
+        return ClassFields.armor.streamFrom(containingNode)
+                .map(n -> {
+                    if (n.isTextual()) {
+                        return armorToLink(n.asText());
+                    }
+                    return armorToLink(ClassFields.full.getTextOrDefault(n,
+                            ClassFields.proficiency.getTextOrEmpty(n)));
+                })
+                .toList();
     }
 
-    String startingTextJoinOrDefault(JsonNode source, String field, Function<String, String> replacements) {
-        List<String> text = findAndReplace(source, field, replacements);
-        return text == null || text.isEmpty() ? "none" : String.join(", ", text);
-    }
-
-    String textToInt(String text) {
-        switch (text) {
-            case "two" -> {
-                return "2";
-            }
-            case "three" -> {
-                return "3";
-            }
-            case "five" -> {
-                return "5";
-            }
-            default -> {
-                tui().errorf("Unknown number of skills (%s) listed in sidekick class features (%s)", text, sources);
-                return "1";
-            }
+    List<String> listOfSkillProfiencies(JsonNode containingNode) {
+        if (isSidekick) {
+            return List.of();
         }
+
+        return ClassFields.skills.streamFrom(containingNode)
+                // ARRAY of objects
+                .map(n -> {
+                    String choose = null;
+                    List<String> baseSkills = new ArrayList<>();
+                    // any: integer
+                    // choose: {
+                    // count: integer,
+                    // from: [
+                    // ...
+                    // ]
+                    // }
+                    // skillName: true
+                    for (var x : iterableFields(n)) {
+                        if ("any".equals(x.getKey())) {
+                            choose = skillChoices(List.of(),
+                                    x.getValue().asInt());
+                        } else if ("choose".equals(x.getKey())) {
+                            choose = skillChoices(
+                                    ClassFields.from.getListOfStrings(x.getValue(), tui()),
+                                    ClassFields.count.intOrDefault(x.getValue(), 1));
+                        } else {
+                            SkillOrAbility skill = index.findSkillOrAbility(n.asText(), getSources());
+                            if (skill != null) {
+                                baseSkills.add(linkifySkill(skill));
+                            }
+                        }
+                    }
+
+                    String allSkills = joinConjunct("and", baseSkills);
+                    if (baseSkills.size() > 0 && choose != null) {
+                        return "%s; and %s".formatted(allSkills, choose);
+                    }
+                    return choose == null ? allSkills : choose;
+                })
+                .toList();
     }
 
-    static class ClassFeature {
-        JsonNode cfNode;
-        String level;
+    List<String> listOfWeaponProfiencies(JsonNode containingNode) {
+        return ClassFields.weapons.streamFrom(containingNode)
+                .map(n -> {
+                    if (ClassFields.optional.booleanOrDefault(n, false)) {
+                        return "%s (optional)".formatted(replaceText(ClassFields.proficiency.getTextOrEmpty(n)));
+                    }
+                    String weaponType = n.asText();
+                    if (weaponType.matches("(?i)(simple|martial)")) {
+                        return "%s weapons".formatted(
+                                sources.isClassic() ? weaponType : toTitleCase(weaponType));
+                    }
+                    return replaceText(weaponType);
+                })
+                .toList();
+    }
 
-        Tools5eSources cfSources;
-        Tools5eIndexType cfType;
+    List<String> listOfToolProfiencies(JsonNode containingNode) {
+        return ClassFields.tools.streamFrom(containingNode)
+                .map(this::replaceText)
+                .toList();
+    }
+
+    String armorToLink(String armor) {
+        return armor
+                .replaceAll("^light", linkify(Tools5eIndexType.itemType,
+                        sources.isClassic() ? "la|PHB|light armor" : "la|XPHB|Light armor"))
+                .replaceAll("^medium", linkify(Tools5eIndexType.itemType,
+                        sources.isClassic() ? "ma|PHB|medium armor" : "ma|XPHB|Medium armor"))
+                .replaceAll("^heavy", linkify(Tools5eIndexType.itemType,
+                        sources.isClassic() ? "ha|PHB|heavy armor" : "ha|XPHB|Heavy armor"))
+                .replaceAll("^shields?", linkify(Tools5eIndexType.item,
+                        sources.isClassic() ? "shield|PHB|shields" : "shield|XPHB|Shields"));
+    }
+
+    String skillChoices(Collection<String> skills, int numSkills) {
+        if (skills.isEmpty() || skills.size() >= 18) {
+            String link = "||skill%s".formatted(numSkills == 1 ? "" : "s");
+            String linkToSkills = linkifyRules(Tools5eIndexType.skill, link, "skills");
+            return sources.isClassic()
+                    ? "choose any %s %s".formatted(numSkills, linkToSkills)
+                    : "Choose %s %s".formatted(numSkills, linkToSkills);
+        }
+
+        List<String> formatted = skills.stream().map(x -> index.findSkillOrAbility(x, getSources()))
+                .filter(x -> x != null)
+                .sorted(SkillOrAbility.comparator)
+                .map(x -> linkifySkill(x))
+                .toList();
+        return sources.isClassic()
+                ? "choose %s from %s".formatted(numSkills,
+                        joinConjunct(" and ", formatted))
+                : "*Choose %s:* %s".formatted(numSkills,
+                        joinConjunct(" or ", formatted));
+    }
+
+    String equipmentDescription(JsonNode startingEquipment) {
+        List<String> text = new ArrayList<>();
+
+        if (ClassFields.additionalFromBackground.existsIn(startingEquipment)
+                && ClassFields.defaultEquipment.existsIn(startingEquipment)) {
+            // Older default format.
+            if (ClassFields.additionalFromBackground.booleanOrDefault(startingEquipment, false)) {
+                text.add("You start with the following items, plus anything provided by your background.");
+                text.add("");
+            }
+
+            for (JsonNode item : ClassFields.defaultEquipment.iterateArrayFrom(startingEquipment)) {
+                text.add("- %s".formatted(replaceText(item)));
+            }
+
+            String goldAlternative = ClassFields.goldAlternative.getTextOrNull(startingEquipment);
+            if (isPresent(goldAlternative)) {
+                text.add("");
+                text.add("Alternatively, you may start with %s gp to buy your own equipment."
+                        .formatted(replaceText(goldAlternative)));
+            }
+        } else {
+            JsonNode entries = SourceField.entries.getFrom(startingEquipment);
+            appendToText(text, entries, null);
+        }
+        return String.join("\n", text);
+    }
+
+    static ClassFeature findClassFeature(JsonSource converter, Tools5eIndexType type, JsonNode cf, String fieldName) {
+        String lookup = cf.isTextual() ? cf.asText() : cf.get(fieldName).asText();
+
+        String finalKey = type.fromTagReference(lookup);
+        ClassFeature feature = keyToClassFeature.get(finalKey);
+        if (feature == null) {
+            JsonNode cfNode = converter.index().getNode(finalKey);
+            if (cfNode == null) {
+                return null; // skipped or not found
+            }
+            feature = new ClassFeature(type, finalKey, cfNode);
+            keyToClassFeature.putIfAbsent(finalKey, feature);
+        }
+        return feature;
+    }
+
+    static record ClassFeature(
+            Tools5eIndexType cfType,
+            JsonNode cfNode,
+            Tools5eSources cfSources,
+            KeyData keyData) {
+        public ClassFeature(Tools5eIndexType cfType, String key, JsonNode cfNode) {
+            this(cfType, cfNode, Tools5eSources.findSources(key),
+                    cfType == Tools5eIndexType.classfeature
+                            ? new ClassFeatureKeyData(key)
+                            : new SubclassFeatureKeyData(key));
+        }
 
         public String getName() {
             return cfSources.getName();
         }
 
+        public String level() {
+            return keyData.level();
+        }
+
         void appendLink(JsonSource converter, List<String> text, String pageSource) {
             converter.maybeAddBlankLine(text);
             String x = converter.decoratedFeatureTypeName(cfSources, cfNode);
-            text.add(String.format("[%s](#%s)", x, converter.toAnchorTag(x + " (Level " + level + ")")));
-        }
-
-        void appendText(JsonSource converter, List<String> text, String pageSource) {
-            boolean pushed = converter.parseState().pushFeatureType();
-            try {
-                converter.maybeAddBlankLine(text);
-                text.add("### " + converter.decoratedFeatureTypeName(cfSources, cfNode) + " (Level " + level + ")");
-                if (!cfSources.primarySource().equalsIgnoreCase(pageSource)) {
-                    text.add(converter.getLabeledSource(cfSources));
-                }
-                text.add("");
-                converter.appendToText(text, cfNode.get("entries"), "####");
-            } finally {
-                converter.parseState().pop(pushed);
-            }
+            text.add(String.format("[%s](#%s)", x, toAnchorTag(x + " (Level " + level() + ")")));
         }
 
         public void appendListItemText(JsonSource converter, List<String> text, String pageSource) {
@@ -694,63 +668,350 @@ public class Json2QuteClass extends Json2QuteCommon {
                     text.add(converter.getLabeledSource(cfSources));
                 }
                 text.add("");
-                converter.appendToText(text, cfNode.get("entries"), null);
+                converter.appendToText(text, SourceField.entries.getFrom(cfNode), null);
                 text.add("");
+            } finally {
+                converter.parseState().pop(pushed);
+            }
+        }
+
+        void appendText(JsonSource converter, List<String> text, String primarySource) {
+            boolean pushed = converter.parseState().pushFeatureType();
+            try {
+                converter.maybeAddBlankLine(text);
+                text.add("### " + converter.decoratedFeatureTypeName(cfSources, cfNode) + " (Level " + level() + ")");
+                if (!cfSources.primarySource().equalsIgnoreCase(primarySource)) {
+                    text.add(converter.getLabeledSource(cfSources));
+                }
+                converter.maybeAddBlankLine(text);
+                converter.appendToText(text, SourceField.entries.getFrom(cfNode), "####");
             } finally {
                 converter.parseState().pop(pushed);
             }
         }
     }
 
-    static class Subclass {
-        public String parentKey;
-        JsonNode subclassNode;
-        String shortName;
+    static interface KeyData {
+        String name();
 
-        Tools5eSources sources;
-        String parentClassSource;
+        String parentName();
 
-        final List<ClassFeature> classFeatures = new ArrayList<>();
+        String parentSource();
 
-        public String getName() {
-            return sources.getName();
+        String level();
+
+        String itemSource();
+    }
+
+    static class ClassFeatureKeyData implements KeyData {
+        final String cfName;
+        final String className;
+        final String classSource;
+        final String level;
+        final String cfSource;
+
+        public ClassFeatureKeyData(String key) {
+            String[] parts = key.split("\\|");
+            this.cfName = parts[1];
+            this.className = parts[2];
+            this.classSource = parts[3];
+            this.level = parts[4];
+            this.cfSource = parts[5];
+        }
+
+        @Override
+        public String name() {
+            return cfName;
+        }
+
+        @Override
+        public String parentName() {
+            return className;
+        }
+
+        @Override
+        public String parentSource() {
+            return classSource;
+        }
+
+        @Override
+        public String level() {
+            return level;
+        }
+
+        @Override
+        public String itemSource() {
+            return cfSource;
         }
     }
 
-    String markdownLinkify(String x, int level) {
-        return String.format("[%s](#%s)", x, toAnchorTag(x + " (Level " + level + ")"));
+    // Unpack a subclass key
+    static class SubclassKeyData implements KeyData {
+        final String scName;
+        final String className;
+        final String classSource;
+        final String scSource;
+
+        public SubclassKeyData(String key) {
+            String[] parts = key.split("\\|");
+            this.scName = parts[1];
+            this.className = parts[2];
+            this.classSource = parts[3];
+            this.scSource = parts[4];
+        }
+
+        @Override
+        public String name() {
+            return scName;
+        }
+
+        @Override
+        public String parentName() {
+            return className;
+        }
+
+        @Override
+        public String parentSource() {
+            return classSource;
+        }
+
+        @Override
+        public String level() {
+            return "";
+        }
+
+        @Override
+        public String itemSource() {
+            return scSource;
+        }
     }
 
-    String columnValue(JsonNode c) {
-        if (c.isTextual() || c.isIntegralNumber()) {
-            String value = c.asText();
-            if (value.isEmpty() || value.equals("0")) {
-                return "⏤";
-            } else {
-                return replaceText(value);
+    // Unpack a subclass feature key
+    static class SubclassFeatureKeyData implements KeyData {
+        final String scfName;
+        final String className;
+        final String classSource;
+        final String scName;
+        final String scSource;
+        final String level;
+        final String scfSource;
+
+        public SubclassFeatureKeyData(String key) {
+            String[] parts = key.split("\\|");
+            this.scfName = parts[1];
+            this.className = parts[2];
+            this.classSource = parts[3];
+            this.scName = parts[4];
+            this.scSource = parts[5];
+            this.level = parts[6];
+            this.scfSource = parts[7];
+        }
+
+        @Override
+        public String name() {
+            return scfName;
+        }
+
+        @Override
+        public String parentName() {
+            return scName;
+        }
+
+        @Override
+        public String parentSource() {
+            return scSource;
+        }
+
+        @Override
+        public String level() {
+            return level;
+        }
+
+        @Override
+        public String itemSource() {
+            return scfSource;
+        }
+    }
+
+    static class LevelProgression {
+        final String level;
+        final String pb;
+        List<String> features = new ArrayList<>();
+        List<String> values = new ArrayList<>();
+        List<String> spellSlots = new ArrayList<>();
+
+        LevelProgression(int level) {
+            this.level = JsonSource.levelToString(level);
+            this.pb = "+" + JsonSource.levelToPb(level);
+        }
+
+        void addFeature(ClassFeature cf) {
+            features.add(toHtmlLink(cf.getName(), cf.level()));
+        }
+
+        void addValue(String value) {
+            values.add(value);
+        }
+
+        void addSpellSlot(String value) {
+            spellSlots.add(value);
+        }
+
+        String toHtmlLink(String x, String level) {
+            return String.format("<a href='#%s'>%s</a>",
+                    toAnchorTag(x + " (Level " + level + ")"),
+                    x);
+        }
+    }
+
+    // Not static. Relies on Json2QuteClass members
+    class SidekickProficiencies {
+        static final Pattern sidekickArmor = Pattern.compile("(?<=with ).*? armor");
+        static final Pattern sidekickHumanoid = Pattern.compile("[Ii]f it is a humanoid[^.]+\\.($| )");
+        static final Pattern sidekickSavingThrows = Pattern.compile("\\b[^ ]+ saving throw of your choice.*");
+        static final Pattern sidekickSkills = Pattern
+                .compile("\\b[^ ]+ skills of your choice(,| from the following list.*)");
+        static final Pattern sidekickTools = Pattern.compile("\\b[^ ]+ tools of your choice");
+        static final Pattern sidekickWeapons = Pattern.compile("(?<=(with|and) )all simple( and martial)? weapons");
+
+        private String armor;
+        private String skills;
+        private String savingThrows;
+        private String tools;
+        private String weapons;
+
+        SidekickProficiencies(JsonNode node) {
+            String text = String.join("\n", SourceField.entries.replaceTextFromList(node, index()));
+            String humanoidClause = null;
+
+            Matcher humanoidMatcher = sidekickHumanoid.matcher(text);
+            if (humanoidMatcher.find()) {
+                humanoidClause = humanoidMatcher.group(0);
+                // Remove the humanoid clause from the text
+                text = humanoidMatcher.replaceAll("");
             }
-        } else if (c.isObject()) {
-            String type = getTextOrEmpty(c, "type");
-            switch (type) {
-                case "dice" -> {
-                    JsonNode toRoll = c.get("toRoll");
-                    List<String> rolls = new ArrayList<>();
-                    toRoll.forEach(f -> rolls.add(String.format("%sd%s", f.get("number").asText(), f.get("faces").asText())));
-                    return String.join(", ", rolls);
-                }
-                case "bonus", "bonusSpeed" -> {
-                    return "+" + c.get("value").asText();
+
+            Matcher armorMatcher = sidekickArmor.matcher(text);
+            if (armorMatcher.find()) {
+                armor = uppercaseFirst(armorMatcher.group());
+                if (humanoidClause.contains("shields")) {
+                    armor += "; and shields if [humanoid](%s)".formatted(toAnchorTag("Bonus Progression (Level 1)"));
                 }
             }
-            throw new IllegalArgumentException("Unknown column object value: " + c.toPrettyString());
-        } else {
-            throw new IllegalArgumentException("Unknown column value: " + c.toPrettyString());
+
+            Matcher savingThrowsMatcher = sidekickSavingThrows.matcher(text);
+            if (savingThrowsMatcher.find()) {
+                savingThrows = uppercaseFirst(savingThrowsMatcher.group());
+            }
+
+            Matcher skillsMatcher = sidekickSkills.matcher(text);
+            if (skillsMatcher.find()) {
+                skills = uppercaseFirst(skillsMatcher.group()).replaceAll(",$", "");
+            }
+
+            // Only present in the humanoid clause
+            Matcher toolMatcher = sidekickTools.matcher(humanoidClause);
+            if (toolMatcher.find()) {
+                tools = "%s if [humanoid](%s)".formatted(
+                        uppercaseFirst(toolMatcher.group()),
+                        toAnchorTag("Bonus Progression (Level 1)"));
+            }
+
+            // Only present in the humanoid clause
+            Matcher weaponsMatcher = sidekickWeapons.matcher(humanoidClause);
+            if (weaponsMatcher.find()) {
+                weapons = "%s if [humanoid](%s)".formatted(
+                        uppercaseFirst(weaponsMatcher.group()),
+                        toAnchorTag("Bonus Progression (Level 1)"));
+            }
+        }
+
+        List<String> armor() {
+            return isPresent(armor) ? List.of(armor) : List.of();
+        }
+
+        List<String> savingThrows() {
+            return isPresent(savingThrows) ? List.of(savingThrows) : List.of();
+        }
+
+        List<String> skills() {
+            return isPresent(skills) ? List.of(skills) : List.of();
+        }
+
+        List<String> tools() {
+            return isPresent(tools) ? List.of(tools) : List.of();
+        }
+
+        List<String> weapons() {
+            return isPresent(weapons) ? List.of(weapons) : List.of();
         }
     }
 
     enum ClassFields implements JsonNodeReader {
+        additionalFromBackground,
+        additionalProperties,
+        any,
+        armor,
+        choose,
+        classFeature,
+        classFeatures,
+        classTableGroups,
+        colLabels,
+        count,
+        defaultEquipment("default"), // default is a reserved word
+        faces,
+        featureKeys,
+        from,
+        full,
+        gainSubclassFeature,
+        goldAlternative,
+        hd,
+        isSidekick,
+        multiclassing,
+        number,
+        optional,
         optionalfeatureProgression,
-        subclassSource,
+        or,
+        primaryAbility,
+        proficienciesGained,
+        proficiency,
+        properties,
+        required,
+        requirements,
+        requirementsSpecial,
+        rows,
+        rowsSpellProgression,
+        shortName,
+        skills,
+        startingEquipment,
+        startingProficiencies,
+        subclassFeature,
+        subclassFeatures,
+        subclassKeys,
         subclassShortName,
+        subclassSource,
+        subclassTableGroups,
+        subclassTitle,
+        toRoll,
+        tools,
+        type,
+        value,
+        weapons,
+        ;
+
+        final String nodeName;
+
+        ClassFields() {
+            nodeName = name();
+        }
+
+        ClassFields(String nodeName) {
+            this.nodeName = nodeName;
+        }
+
+        @Override
+        public String nodeName() {
+            return nodeName;
+        }
     }
 }
